--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -3,22 +3,33 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Gulp Starter</title>
+    <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="app.css" />
   </head>
 
   <body>
-    <h1>Gulp All The Things!</h1>
-    <div id="content"></div>
-    <div class="social-icons">
-      <h4>Ubiquitous Social Icons!</h4>
-      <i class="icon -facebook"></i>
-      <i class="icon -twitter"></i>
-      <i class="icon -linkedin"></i>
-      <i class="icon -pinterest"></i>
-      <small>(run <code>gulp iconFont</code> to generate/regenerate)</small>
-    </div>
-    <script src="global.js"></script>
+    <h1>Tic Tac Toe</h1>
+
+    <table class="board" border="1" cellpadding="4">
+        <tr>
+            <td><input class="field top-left" type="checkbox" /></td>
+            <td><input class="field top-center" type="checkbox" /></td>
+            <td><input class="field top-right" type="checkbox" /></td>
+        </tr>
+        <tr>
+            <td><input class="field middle-left" type="checkbox" /></td>
+            <td><input class="field middle-center" type="checkbox" /></td>
+            <td><input class="field middle-right" type="checkbox" /></td>
+        </tr>
+        <tr>
+            <td><input class="field bottom-left" type="checkbox" /></td>
+            <td><input class="field bottom-center" type="checkbox" /></td>
+            <td><input class="field bottom-right" type="checkbox" /></td>
+        </tr>
+    </table>
+
+    <button type="button" class="reset">reset</button>
+
     <script src="page.js"></script>
   </body>
 </html>
