--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -12,19 +12,19 @@
 
     <table class="board" border="1" cellpadding="4">
         <tr>
-            <td><input class="field top-left" type="checkbox" /></td>
-            <td><input class="field top-center" type="checkbox" /></td>
-            <td><input class="field top-right" type="checkbox" /></td>
+            <td><input class="field" type="checkbox" /></td>
+            <td><input class="field" type="checkbox" /></td>
+            <td><input class="field" type="checkbox" /></td>
         </tr>
         <tr>
-            <td><input class="field middle-left" type="checkbox" /></td>
-            <td><input class="field middle-center" type="checkbox" /></td>
-            <td><input class="field middle-right" type="checkbox" /></td>
+            <td><input class="field" type="checkbox" /></td>
+            <td><input class="field" type="checkbox" /></td>
+            <td><input class="field" type="checkbox" /></td>
         </tr>
         <tr>
-            <td><input class="field bottom-left" type="checkbox" /></td>
-            <td><input class="field bottom-center" type="checkbox" /></td>
-            <td><input class="field bottom-right" type="checkbox" /></td>
+            <td><input class="field" type="checkbox" /></td>
+            <td><input class="field" type="checkbox" /></td>
+            <td><input class="field" type="checkbox" /></td>
         </tr>
     </table>
 
