update allows allow reset

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -28,7 +28,7 @@
         </tr>
     </table>
 
-    <button type="button" class="reset" disabled>reset</button>
+    <button type="button" class="reset">reset</button>
 
     <script src="page.js"></script>
   </body>
