add show turns & result

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -10,6 +10,8 @@
   <body>
     <h1>Tic Tac Toe</h1>
 
+    <p>turn: <span class="turn"></span></p>
+
     <table class="board" border="1" cellpadding="4">
         <tr>
             <td><input class="field" type="checkbox" /></td>
@@ -29,6 +31,8 @@
     </table>
 
     <button type="button" class="reset">reset</button>
+
+    <p class="result"></p>
 
     <script src="page.js"></script>
   </body>
