--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="app.css" />
-  </head>
+</head>
+<body>
 
-  <body>
-    <h1>Tic Tac Toe</h1>
+    <header>
+        <h1>Tic Tac Toe</h1>
+        <div class="state"></div>
+        <button type="button" class="reset">reset</button>
+    </header>
 
-    <p>turn: <span class="turn"></span></p>
 
     <table class="board" border="1" cellpadding="4">
         <tr>
@@ -30,10 +33,6 @@
         </tr>
     </table>
 
-    <button type="button" class="reset">reset</button>
-
-    <p class="result"></p>
-
     <script src="page.js"></script>
-  </body>
+</body>
 </html>
