update board to use flexbox

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -14,24 +14,23 @@
         <button type="button" class="reset">reset</button>
     </header>
 
-
-    <table class="board" border="1" cellpadding="4">
-        <tr>
-            <td><input class="field" type="checkbox" /></td>
-            <td><input class="field" type="checkbox" /></td>
-            <td><input class="field" type="checkbox" /></td>
-        </tr>
-        <tr>
-            <td><input class="field" type="checkbox" /></td>
-            <td><input class="field" type="checkbox" /></td>
-            <td><input class="field" type="checkbox" /></td>
-        </tr>
-        <tr>
-            <td><input class="field" type="checkbox" /></td>
-            <td><input class="field" type="checkbox" /></td>
-            <td><input class="field" type="checkbox" /></td>
-        </tr>
-    </table>
+    <div class="board">
+        <div class="row">
+            <div class="field"></div>
+            <div class="field"></div>
+            <div class="field"></div>
+        </div>
+        <div class="row">
+            <div class="field"></div>
+            <div class="field"></div>
+            <div class="field"></div>
+        </div>
+        <div class="row">
+            <div class="field"></div>
+            <div class="field"></div>
+            <div class="field"></div>
+        </div>
+    </div>
 
     <script src="page.js"></script>
 </body>
