--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
 
@@ -32,6 +32,10 @@
         </div>
     </div>
 
-    <script src="/scripts/main.js"></script>
+    <script src="scripts/lib/util.js"></script>
+    <script src="scripts/lib/dom.js"></script>
+    <script src="scripts/lib/matrix.js"></script>
+    <script src="scripts/tictactoe.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
