--- a/src/state-leading/index.html
+++ b/src/state-leading/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="../shared/main.css" />
 </head>
 <body>
 
@@ -32,10 +30,10 @@
         </div>
     </div>
 
-    <script src="scripts/lib/util.js"></script>
-    <script src="scripts/lib/dom.js"></script>
-    <script src="scripts/lib/matrix.js"></script>
-    <script src="scripts/tictactoe.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="../shared/util.js"></script>
+    <script src="../shared/dom.js"></script>
+    <script src="../shared/matrix.js"></script>
+    <script src="./tictactoe.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
