html-leading uses shared libs

--- a/src/html-leading/index.html
+++ b/src/html-leading/index.html
@@ -47,10 +47,9 @@
         </div>
     </div>
 
-    <!-- <script src="../shared/util.js"></script> -->
-    <!-- <script src="../shared/dom.js"></script> -->
-    <!-- <script src="../shared/matrix.js"></script> -->
-    <!-- <script src="./tictactoe.js"></script> -->
+    <script src="../shared/util.js"></script>
+    <script src="../shared/dom.js"></script>
+    <script src="../shared/matrix.js"></script>
     <script src="./main.js"></script>
 </body>
 </html>
